Fix spacing in dashboard
* Card going slightly off the edge of page fixed

--- a/src/containers/dashboard/index.scss
+++ b/src/containers/dashboard/index.scss
@@ -53,6 +53,7 @@
 	}
 
 	.card {
-		margin: 10px;
+		margin-top: 10px;
+		margin-bottom: 10px;
 	}
 }
